Correct spelling error

--- a/app/views/debugging/debugging.html.erb
+++ b/app/views/debugging/debugging.html.erb
@@ -199,7 +199,7 @@
       </td>
     </tr>
     <tr class="govuk-table__row" id="licence-expiry-date">
-      <td class="govuk-table__cell">Sentence/ license end date</td>
+      <td class="govuk-table__cell">Sentence/ licence end date</td>
       <td class="govuk-table__cell table_cell__left_align">
         <%= format_date(@offender.licence_expiry_date, replacement: 'N/A') %>
       </td>
