Refactor to unify case info add/edit journeys
This commit refactors the CaseInformation new and edit journeys to merge
them into one. Rather than having a separate 'new' journey, we simply
use the 'edit' journey and have it auto-create records when needed.

In other words:
- For offenders in the 'Add missing information' list, new case
information records will be created.
- For offenders in the 'Make allocations' list, clicking 'Change'
against the 'Service provider' field will update existing case
information records.

The old 'edit' page (which this commit replaces) used JavaScript to
show/hide form fields based on whether England/Wales or
Scotland/Northern Ireland was chosen.

Since the new 'edit' journey is split over two pages (similar to the old
'new' journey), the dynamic show/hide of questions is no longer required
– the conditional questions are split over two pages.

I've therefore removed the views for the old 'edit' page, as well as the
associated JavaScript behaviour.

Additionally, I found some unused JavaScript methods which look like
they were left over from fd3aa9a, so have removed them too.

I had to change the tests slightly to account for the fact that the
edit journey is now split across 2 pages (as with the 'new' journey),
rather than being all on one page.

I've also simplified the `choose_country` helper method. The prefix
parameter isn't needed any more, so I've removed it.

--- a/app/views/case_information/edit_probation_data.html.erb
+++ b/app/views/case_information/edit_probation_data.html.erb
@@ -9,12 +9,12 @@
 <h2 class="govuk-heading-m"><%= @prisoner.offender_no %></h2>
 <p class="govuk-!-margin-bottom-8">You can find this information in NDelius.</p>
 
-<%= form_for(@case_info, url: prison_case_information_index_path(@prison.code), method: :post) do |form| %>
+<%= form_for(@case_info, url: prison_case_information_path(@prison.code, @prisoner.offender_no), method: :put) do |form| %>
   <%= form.hidden_field(:nomis_offender_id, value: @prisoner.offender_no) %>
   <%= form.hidden_field(:probation_service, value: @case_info.probation_service) %>
   <%= hidden_field_tag("sort", params[:sort])%>
   <%= hidden_field_tag("page", params[:page]) %>
-  <%= hidden_field_tag("stage", 'missing_info') %>
+  <%= hidden_field_tag("form", "probation_data") %>
 
   <fieldset class="govuk-fieldset">
     <div class="govuk-form-group">
@@ -70,19 +70,6 @@
                       { include_blank: true },
                       { id:"team_autocomplete", class: "govuk-input--width-30" } ) %>
     </div>
-
-    <table class="govuk-table">
-      <tbody class="govuk-table__body">
-        <tr class="govuk-table__row">
-          <th class="govuk-table__cell govuk-body" scope="row">
-            <h3 class="govuk-body proceeding-item" id="chosen_team"></h3>
-          </th>
-          <td class="govuk-table__cell govuk-table__cell--numeric">
-            <span id="remove_team" onclick="remove_team()">Remove</span>
-          </td>
-        </tr>
-      </tbody>
-    </table>
 
     <details class="govuk-details" data-module="govuk-details">
       <summary class="govuk-details__summary">
