Add a "What's new" page, which can be accessed from a link in the footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,6 +13,9 @@
           <li class="govuk-footer__list-item">
             <%= link_to("Feedback", "https://www.research.net/r/MM8TNLW", target: "_blank") %>
           </li>
+          <li class="govuk-footer__list-item">
+            <%= link_to("What's new", whats_new_path) %>
+          </li>
         </ul>
       </div>
     </div>
