Display any service notifications to appear in the app layout, so that it is visible on the majority of MOIC views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <%= render '/layouts/header' %>
     <%= render '/layouts/phase_banner' %>
     <%= yield(:switcher) if content_for?(:switcher) %>
+    <%= render 'layouts/service_notification_banner' %>
 
     <div class='govuk-width-container'>
       <main class='govuk-main-wrapper' id='main-content' role='main'>
