Style the service notification banner

--- a/app/views/layouts/_service_notification_banner.html.erb
+++ b/app/views/layouts/_service_notification_banner.html.erb
@@ -2,7 +2,7 @@
   <% service_notifications.each do |service_alert| %>
       <div class="govuk-width-container app-site-width-container">
         <br>
-        <div class="service_notification_banner">
+        <div class="service_banner">
           <button type="button" class="close-service-notification" id=<%= service_alert['id'] %>>
             <%= image_tag('icon-close-cross-black.svg', alt:"close notification", class: "close-button") %>
           </button>
