Add javascript to permanently hide notifications if the user closes it. If the user closes the notification, then the id of that notification is added to localStorage on the user’s browser. We only show the notifications that do not have the id stored in localStorage.

--- a/app/views/layouts/_service_notification_banner.html.erb
+++ b/app/views/layouts/_service_notification_banner.html.erb
@@ -3,10 +3,10 @@
       <div class="govuk-width-container app-site-width-container">
         <br>
         <div class="service_banner">
-          <button type="button" class="close-service-notification" id=<%= service_alert['id'] %>>
+          <button onclick="cancelThisNotification(this)" type="button" class="close-service-notification" id=<%= service_alert['id'] %>>
             <%= image_tag('icon-close-cross-black.svg', alt:"close notification", class: "close-button") %>
           </button>
-          <p><%= service_alert['text']%></p>
+          <p><%= raw(service_alert['text']) %></p>
         </div>
       </div>
     <% end %>
