--- a/app/views/case_information/edit_probation_data.html.erb
+++ b/app/views/case_information/edit_probation_data.html.erb
@@ -4,7 +4,13 @@
   <%= render :partial => "/shared/validation_errors", :locals => { :errors => @case_info.errors } %>
 <% end %>
 
-<h1 class="govuk-heading-xl govuk-!-margin-top-4 govuk-!-margin-bottom-4">Add missing information</h1>
+<h1 class="govuk-heading-xl govuk-!-margin-top-4 govuk-!-margin-bottom-4">
+  <% if @case_info.new_record? %>
+    Add missing information
+  <% else %>
+    Edit case information
+  <% end %>
+</h1>
 <h2 class="govuk-!-margin-bottom-0 govuk-heading-m"><%= @prisoner.full_name %> (<%= format_date(@prisoner.date_of_birth) %>)</h2>
 <h2 class="govuk-heading-m"><%= @prisoner.offender_no %></h2>
 <p class="govuk-!-margin-bottom-8">You can find this information in NDelius.</p>
@@ -19,7 +25,7 @@
   <fieldset class="govuk-fieldset">
     <div class="govuk-form-group">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-        <h1 class="govuk-fieldset__heading">Select the service provider</h1>
+        <h2 class="govuk-fieldset__heading">Select the service provider</h2>
       </legend>
 
       <div class="govuk-radios" data-module="govuk-radios">
@@ -36,7 +42,7 @@
 
     <div class="govuk-form-group">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-        <h1 class="govuk-fieldset__heading">Choose the prisoner's tier</h1>
+        <h2 class="govuk-fieldset__heading">Choose the prisoner's tier</h2>
       </legend>
 
       <div class="govuk-radios" data-module="govuk-radios">
@@ -61,7 +67,7 @@
 
     <div class="govuk-form-group">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-        <h1 class="govuk-fieldset__heading">Select the prisoner's Team</h1>
+        <h2 class="govuk-fieldset__heading">Select the prisoner's Team</h2>
       </legend>
       <span class="govuk-hint">Enter the full name of the Team, for example 'NPS Croydon'</span>
 
