Clean up some messy CSS
- Fix a bug where the pagination result count was using Arial font,
  rather than GDS Transport (e.g. "Showing 1 - 50 of 800 results")
- Clean up messy indentation in application.scss
- Drop unnecessary @import statements in application.scss – all files in
  the stylesheets directory are already imported with `require_tree .`
- Remove custom asset include path for accessible-autocomplete in favour
  of the existing node_modules path. This allows us to disambiguate
  between our custom autocomplete.scss file and the autocomplete.scss
  file which comes from the node module.
- Remove unused rules from case_info.scss – the only rule we use is
  the one to set GDS Transport font on the autocomplete dropdown list,
  which has been moved into the more aptly named autocomplete.scss.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,40 +15,40 @@
  *= require_self
  */
 
-@import "autocomplete";
-@import "tables";
-@import "pagination";
-@import "case_info";
+@import "accessible-autocomplete/src/autocomplete";
 
 a:visited {
-    color: #005ea5;
+  color: #005ea5;
 }
- .no-bottom-margin {
-     margin-bottom: 0;
- }
 
- .dashboard-row {
-     margin-top: 20px;
+.no-bottom-margin {
+  margin-bottom: 0;
+}
 
-     .wrapper {
-        min-height: 160px;
-        background-color: #f9f9f9;
-    }
-    .govuk-heading-s {
-        background-color: #eaeaea;
-        padding: 8px;
-        margin-bottom: 0;
-    }
-    .govuk-body {
-        padding: 8px;
-    }
- }
+.dashboard-row {
+  margin-top: 20px;
 
- .cancel-button {
-    line-height: 38px;
-    margin-left: 20px;
- }
+  .wrapper {
+    min-height: 160px;
+    background-color: #f9f9f9;
+  }
 
- .govuk-header__navigation-item a {
-     color: white !important;
- }
+  .govuk-heading-s {
+    background-color: #eaeaea;
+    padding: 8px;
+    margin-bottom: 0;
+  }
+
+  .govuk-body {
+    padding: 8px;
+  }
+}
+
+.cancel-button {
+  line-height: 38px;
+  margin-left: 20px;
+}
+
+.govuk-header__navigation-item a {
+  color: white !important;
+}
