--- a/app/assets/stylesheets/pagination.scss
+++ b/app/assets/stylesheets/pagination.scss
@@ -1,6 +1,5 @@
-
 .pagination {
-    font-family: "nta", Arial, sans-serif;
+    font-family: "GDS Transport", Arial, sans-serif;
     font-size: 19px;
 
     .result-count {
