Remove service_notifications as a helper method in ApplicationsController and move it to a before_action method in PrisonApplicationController.
The decision to move it from ApplicationController is because we are not
showing the banner on static pages, only on the dynamic pages within
PrisonApplicationController.

--- a/app/views/layouts/_service_notification_banner.html.erb
+++ b/app/views/layouts/_service_notification_banner.html.erb
@@ -1,5 +1,5 @@
-<% unless service_notifications.empty? %>
-  <% service_notifications.each do |service_alert| %>
+<% unless @service_notifications.empty? %>
+  <% @service_notifications.each do |service_alert| %>
       <div class="govuk-width-container app-site-width-container">
         <br>
         <div class="service_banner">
