Fix typo in What's new breadcrumb

--- a/app/views/pages/whats_new.html.erb
+++ b/app/views/pages/whats_new.html.erb
@@ -4,7 +4,7 @@
       <li class="govuk-breadcrumbs__list-item">
         <a class="govuk-breadcrumbs__link" href="/">Home</a>
       </li>
-      <li class="govuk-breadcrumbs__list-item" aria-current="page">Whats-new</li>
+      <li class="govuk-breadcrumbs__list-item" aria-current="page">What's new</li>
     </ul>
     <br>
   </div>
