Remove <br> line break for each banner notification and replace with css margin settings

--- a/app/assets/stylesheets/service_banner.scss
+++ b/app/assets/stylesheets/service_banner.scss
@@ -1,6 +1,8 @@
 .service_banner {
   padding: 15px;
   background-color: #fff2d4;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .service_banner p {
