--- a/app/views/layouts/_service_notification_banner.html.erb
+++ b/app/views/layouts/_service_notification_banner.html.erb
@@ -2,7 +2,7 @@
   <% @service_notifications.each do |service_alert| %>
       <div class="govuk-width-container app-site-width-container">
         <div class="service_banner">
-          <button onclick="cancelThisNotification(this)" type="button" class="close-service-notification" id=<%= "ServiceNotifications." + service_alert['id'] %>>
+          <button onclick="cancelThisNotification(this)" type="button" class="close-service-notification" id="<%= "ServiceNotifications." + service_alert['id'] %>">
             <%= image_tag('icon-close-cross-black.svg', alt:"close notification", class: "close-button") %>
           </button>
           <p><%= raw(service_alert['text']) %></p>
