--- a/app/views/allocations/_case_information.html.erb
+++ b/app/views/allocations/_case_information.html.erb
@@ -29,7 +29,7 @@
   <tr class="govuk-table__row">
     <td class="govuk-table__cell">Tiering calculation</td>
     <td class="govuk-table__cell table_cell__left_align">
-    Tier <%= @prisoner.tier %>
+      <%= @prisoner.tier == 'N/A' ? @prisoner.tier : "Tier #{@prisoner.tier}" %>
       <a class="govuk-link pull-right" href="<%= edit_prison_case_information_path(@prison.code, @prisoner.offender_no) %>">Change</a>
     </td>
   </tr>
