--- a/app/views/allocations/confirm_reallocation.html.erb
+++ b/app/views/allocations/confirm_reallocation.html.erb
@@ -6,10 +6,10 @@
     <%= form_tag(prison_allocations_path(@prison.code), id: "confirm_allocation_form") do %>
       <h1 class="govuk-heading-xl govuk-!-margin-top-4">Confirm allocation</h1>
       <p class="govuk-body">You are allocating <%= "#{@prisoner.first_name} #{@prisoner.last_name}".titleize %> to <%= "#{@pom.first_name} #{@pom.last_name}".titleize %>.</p>
-      <% if @pom.emails.blank? %>
+      <% if @pom.email_address.blank? %>
         <p class="govuk-body">No notification email will be sent to <%= "#{@pom.first_name} #{@pom.last_name}".titleize %> as they have no registered email address in NOMIS.</p>
       <% else %>
-        <p class="govuk-body">We will send a confirmation email to <%= @pom.emails.first %>.</p>
+        <p class="govuk-body">We will send a confirmation email to <%= @pom.email_address %>.</p>
       <% end %>
 
     <div class="govuk-form-group">
