Amend the path to where the image for the banner close button is located

--- a/app/views/layouts/_service_notification_banner.html.erb
+++ b/app/views/layouts/_service_notification_banner.html.erb
@@ -3,7 +3,7 @@
       <div class="govuk-width-container app-site-width-container">
         <div class="service_banner">
           <button onclick="cancelThisNotification(this)" type="button" class="close-service-notification" id="<%= "ServiceNotifications." + service_alert['id'] %>">
-            <%= image_tag('icon-close-cross-black.svg', alt:"close notification", class: "close-button") %>
+            <%= image_tag(asset_path('@ministryofjustice/frontend/moj/assets/images/icon-close-cross-black.svg'), alt:"close notification", class: "close-button") %>
           </button>
           <p><%= raw(service_alert['text']) %></p>
         </div>
