pom-805 Fix bug in controller and modify bad data in view

--- a/app/views/allocations/_allocate_primary_pom.html.erb
+++ b/app/views/allocations/_allocate_primary_pom.html.erb
@@ -1,6 +1,6 @@
 <div class="moj-timeline__item">
   <div class="moj-timeline__header">
-    <h2 class="moj-timeline__title">Prisoner allocation</h2>
+    <h2 class="moj-timeline__title">Prisoner allocated</h2>
   </div>
 
   <div class="moj-timeline__description">Prisoner allocated to <%= pom_name.titleize %>
