--- a/app/views/debugging/debugging.html.erb
+++ b/app/views/debugging/debugging.html.erb
@@ -41,7 +41,7 @@
     <tr class="govuk-table__row" id="convicted">
       <td class="govuk-table__cell">Convicted?</td>
       <td class="govuk-table__cell table_cell__left_align">
-        <%= humanized_bool(@offender.convicted?) %> (<%= @offender.convicted_status %>)
+        <%= humanized_bool(@offender.convicted?) %>
     </tr>
     <tr class="govuk-table__row" id="sentenced">
       <td class="govuk-table__cell">Sentenced?</td>
