POM-321 new primary navigation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <body class="govuk-template__body js-enabled">
     <%= render '/layouts/header' %>
+    <%= render 'layouts/primary_navigation' %>
     <%= render '/layouts/phase_banner' %>
     <%= yield(:switcher) if content_for?(:switcher) %>
     <%= render 'layouts/service_notification_banner' %>
