POM-848 Early Allocation dead-end content change

--- a/app/views/early_allocations/dead_end.html.erb
+++ b/app/views/early_allocations/dead_end.html.erb
@@ -18,4 +18,17 @@
   This is something we are currently working on.
 </p>
 
+<p class="govuk-body">
+  You can make the assessment by completing the referral on word and emailing to the relevant LDU.
+</p>
+
+<p class="govuk-body">
+Please speak to your HOMd for more information if required.
+</p>
+
+<p class="govuk-body">
+The Early Allocation referral can be found
+  on <a href="https://equip-portal.rocstac.com/CtrlWebIsapi.dll/?__id=webDiagram.show&map=0%3A9A63E167DE4B400EA07F81A9271E1944&dgm=4F984B45CBC447B1A304B2FFECABB777">Equip</a>
+</p>
+
 <%= back_link %>
