Add link to Equip on first page

--- a/app/views/early_allocations/new.html.erb
+++ b/app/views/early_allocations/new.html.erb
@@ -2,4 +2,9 @@
   <%= render '/layouts/prison_switcher' %>
 <% end %>
 
+<p class="govuk-body">
+  For further guidance on Early Allocation referral please see
+  <a href="https://equip-portal.rocstac.com/CtrlWebIsapi.dll/?__id=webDiagram.show&map=0%3A9A63E167DE4B400EA07F81A9271E1944&dgm=4F984B45CBC447B1A304B2FFECABB777">EQuiP</a>
+</p>
+
 <%= render 'stage1', form_method: :post %>
