missed accidental enlargement of legend text for booleans

--- a/app/views/early_allocations/_yes_no_boolean_field.html.erb
+++ b/app/views/early_allocations/_yes_no_boolean_field.html.erb
@@ -4,5 +4,5 @@
         :value,
         :name,
         hint_text: hint_text,
-        legend: { text: heading_text.html_safe }
+        legend: { text: heading_text.html_safe, size: 's' }
     ) %>
