--- a/app/views/allocations/_case_information.html.erb
+++ b/app/views/allocations/_case_information.html.erb
@@ -21,6 +21,20 @@
       <%= pom_responsibility_label(@prisoner) %>
     </td>
   </tr>
+  <tr class="govuk-table__row" id="handover-start-date-row">
+    <td class="govuk-table__cell govuk-!-width-one-half">Handover start date</td>
+    <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half">
+      <%= format_date(@prisoner.handover_start_date) %>
+      <span class="handover-reason">(<%= @prisoner.handover_reason %>)</span>
+    </td>
+  </tr>
+  <tr class="govuk-table__row" id="responsibility-handover-date-row">
+    <td class="govuk-table__cell govuk-!-width-one-half">Responsibility handover</td>
+    <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half">
+      <%= format_date(@prisoner.responsibility_handover_date, replacement: 'Unknown - missing MAPPA info') %>
+      <span class="handover-reason">(<%= @prisoner.handover_reason %>)</span>
+    </td>
+  </tr>
   <tr class="govuk-table__row">
     <td class="govuk-table__cell">Last known address in Wales</td>
     <td class="govuk-table__cell table_cell__left_align">
