--- a/app/views/allocations/show.html.erb
+++ b/app/views/allocations/show.html.erb
@@ -44,7 +44,7 @@
           <%= link_to 'Change', new_prison_responsibility_path(@prison.code, nomis_offender_id: @prisoner.offender_no), class: 'govuk-link pull-right' %>
         <% end %>
       </td>
-<!--    </tr>-->
+    </tr>
 <!--    <tr class="govuk-table__row">-->
 <!--      <td class="govuk-table__cell govuk-!-width-one-half">Early assessment eligibility</td>-->
 <!--      <td class="govuk-table__cell table_cell__left_align govuk-!-width-one-half">-->
@@ -88,6 +88,20 @@
       <td class="govuk-table__cell">POM role</td>
       <td class="govuk-table__cell table_cell__left_align">
         <%= pom_responsibility_label(@prisoner) %>
+      </td>
+    </tr>
+    <tr class="govuk-table__row" id="handover-start-date-row">
+      <td class="govuk-table__cell govuk-!-width-one-half">Handover start date</td>
+      <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half">
+        <%= format_date(@prisoner.handover_start_date) %>
+        <span class="handover-reason">(<%= @prisoner.handover_reason %>)</span>
+      </td>
+    </tr>
+    <tr class="govuk-table__row" id="responsibility-handover-date-row">
+      <td class="govuk-table__cell govuk-!-width-one-half">Responsibility handover</td>
+      <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half">
+        <%= format_date(@prisoner.responsibility_handover_date, replacement: 'Unknown - missing MAPPA info') %>
+        <span class="handover-reason">(<%= @prisoner.handover_reason %>)</span>
       </td>
     </tr>
     <tr class="govuk-table__row">
