This commit makes the 'case owner' column on the 'Make Allocations' page sortable.
Although the test coverage suggested that tests already covered sorting,
I included tests that specifically sort the 'case owner' column.

--- a/app/views/summary/unallocated.html.erb
+++ b/app/views/summary/unallocated.html.erb
@@ -44,7 +44,12 @@
         </a>
         <%= sort_arrow('earliest_release_date') %>
       </th>
-      <th class="govuk-table__header sorter-false" scope="col">Case owner</th>
+      <th class="govuk-table__header sorter-false" scope="col">
+        <a href="<%= sort_link('case_owner') %>">
+          Case owner
+        </a>
+        <%= sort_arrow('case_owner') %>
+      </th>
       <th class="govuk-table__header sorter-false" scope="col">
         <a href="<%= sort_link('awaiting_allocation_for') %>">
           Waiting
