--- a/app/views/debugging/debugging.html.erb
+++ b/app/views/debugging/debugging.html.erb
@@ -280,7 +280,7 @@
     <tr class="govuk-table__row">
       <td class="govuk-table__cell govuk-!-width-one-half">COM</td>
       <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half">
-        <%= @allocation&.com_name.presence || "Unknown" %>
+        <%= @offender.allocated_com_name.presence || "Unknown" %>
       </td>
     </tr>
     </tbody>
