--- a/app/views/prisoners/_community_information.html.erb
+++ b/app/views/prisoners/_community_information.html.erb
@@ -29,7 +29,7 @@
     <tr class="govuk-table__row">
       <td class="govuk-table__cell govuk-!-width-one-half">COM</td>
       <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half">
-        <%= @allocation&.com_name.presence || "Unknown" %>
+        <%= @prisoner.allocated_com_name.presence || "Unknown" %>
       </td>
     </tr>
   </tbody>
