--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -56,7 +56,7 @@
   <div class="govuk-grid-column-one-third">
     <div class="wrapper">
       <h1 class="govuk-heading-s">
-        <%= link_to "See case handover status", prison_summary_handovers_path(@prison.code), class:"govuk-link" %>
+        <%= link_to "See case handover status", prison_handovers_path(@prison.code), class:"govuk-link" %>
       </h1>
       <p class="govuk-body">Cases where responsibility is being handed over (or is within 30 days of handover) to the community probation team.</p>
     </div>
@@ -88,7 +88,7 @@
     <div class="govuk-grid-column-one-third">
       <div class="wrapper">
         <h1 class="govuk-heading-s">
-          <%= link_to "See cases close to handover", prison_staff_caseload_handover_start_path(@prison.code, @staff_id), class:"govuk-link" %>
+          <%= link_to "See cases close to handover", prison_staff_caseload_handovers_path(@prison.code, @staff_id), class:"govuk-link" %>
         </h1>
         <p class="govuk-body">All cases for start of handover to the community in the next thirty days</p>
       </div>
