--- a/app/views/handovers/index.html.erb
+++ b/app/views/handovers/index.html.erb
@@ -6,7 +6,7 @@
   <%= render "search/search_box" %>
 </div>
 
-<%= render(:partial => 'summary_subnav', :locals => {:active => :handovers}) %>
+<%= render(:partial => 'subnav', :locals => {:active => :all_handovers}) %>
 
 <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">Case handover status</h1>
 <p>Cases where responsibility is being handed over (or is within 30 days of handover) to the community probation team.</p>
