--- a/app/views/poms/show.html.erb
+++ b/app/views/poms/show.html.erb
@@ -5,7 +5,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-quarter">
     <div class="govuk-body">POM level</div>
-    <div class="govuk-body govuk-!-font-weight-bold"><%= pom_level(@pom.position(@prison.code)) %></div>
+    <div class="govuk-body govuk-!-font-weight-bold"><%= pom_level(@pom.position) %></div>
   </div>
   <div class="govuk-grid-column-one-quarter">
     <div class="govuk-body">Working pattern</div>
